Centralização dos titulos das paginas

--- a/departamentos.html
+++ b/departamentos.html
@@ -31,7 +31,7 @@
   </nav>
 
   <main>
-    <h1>Departamentos</h1>
+    <h1 class="titulo"> Departamentos </h1>
     <p class="subheading">Responsáveis por Departamentos</p>
     <p class="subheading">Subheading</p>
     <div class="departments-grid">
