--- a/eventos.html
+++ b/eventos.html
@@ -31,7 +31,7 @@
   </nav>
 
   <main>
-    <h1>Eventos</h1>
+    <h1 class="titulo">Eventos</h1>
     <p class="subheading">Calendário de Eventos</p>
     <p class="subheading">Datas Comemorativas</p>
     <div class="events-grid">
