--- a/politicas.html
+++ b/politicas.html
@@ -31,7 +31,7 @@
   </nav>
 
   <main>
-    <h1>Políticas</h1>
+    <h1 class="titulo">Políticas</h1>
     <ul class="policy-list">
       <li><span>1</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
       <li><span>2</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
