--- a/noticias.html
+++ b/noticias.html
@@ -31,7 +31,7 @@
   </nav>
 
 <main>
-    <h1>Notícias</h1>
+    <h1 class="titulo">Notícias</h1>
     <article>
       <h2>Heading</h2>
       <h3>Subheading</h3>
