realizado modificação na estrutura de noticias

--- a/noticias.html
+++ b/noticias.html
@@ -31,14 +31,25 @@
   </nav>
 
 <main>
-    <h1 class="titulo">Notícias</h1>
-    <article>
-      <h2>Heading</h2>
-      <h3>Subheading</h3>
-      <p>Body text for your whole article or post. We'll put in some lorem ipsum to show how a filled-out page might look: Excepturi efficient emerging, minim veniam anim aute consectetur adipiscing elit. International first-class nulla quisquam architecto! Tempora, hic sint!Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</p>
+  <h1>Notícias</h1>
+  <div class="news-grid">
+    <article class="news-card">
       <div class="image-placeholder"></div>
+      <h2>Novo Lançamento de Série</h2>
+      <p>Confira o mais recente sucesso da YZ Video, disponível agora em nossa plataforma!</p>
     </article>
-  </main>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Evento Ao Vivo Anunciado</h2>
+      <p>Participe do nosso próximo evento ao vivo no próximo sábado às 20h.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+  </div>
+</main>
   <script src="script.js"></script>
 </body>
 </html>
