aumento de conteudo nas noticias e leve ajuste no políticas

--- a/noticias.html
+++ b/noticias.html
@@ -48,6 +48,36 @@
       <h2>Atualização na Tecnologia</h2>
       <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
     </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
+    <article class="news-card">
+      <div class="image-placeholder"></div>
+      <h2>Atualização na Tecnologia</h2>
+      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+    </article>
   </div>
 </main>
   <script src="script.js"></script>
