aumento do conteudo de eventos

--- a/eventos.html
+++ b/eventos.html
@@ -65,6 +65,51 @@
         <h3>Title</h3>
         <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
       </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
+      <div class="event-card">
+        <div class="image-placeholder"></div>
+        <h3>Title</h3>
+        <p>Body text for whatever you'd like to say. Add main takeaway points, quotes, anecdotes, or even a very short story.</p>
+      </div>
     </div>
   </main>
   <script src="script.js"></script>
