inserção da primeira imagem da pagina home

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
   <main>
     <div class="content-grid">
-      <div class="content-box"></div>
-      <div class="content-box"></div>
-      <div class="content-box large"></div>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="imagem3.png" alt="">
     </div>
   </main>
   <script src="script.js"></script>
