inserção do conteudo da pagina de politica e sobre

--- a/politicas.html
+++ b/politicas.html
@@ -33,11 +33,16 @@
   <main>
     <h1 class="titulo">Políticas</h1>
     <ul class="policy-list">
-      <li><span>1</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
-      <li><span>2</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
-      <li><span>3</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
-      <li><span>4</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
-      <li><span>5</span> Lorem ipsum, dolor sit amet consectetur adipiscing elit. Delectus aliquam quasi totam similique a quod ipsa, molestiae eligendi voluptates soluta laborum nam nulla, aspernatur, quam consequuntur architecto! Tempora, hic sint!</li>
+      <li><span>1</span> Política de Qualidade e Excelência
+      Garantir que todos os projetos entregues atendam aos mais altos padrões técnicos e criativos, prezando sempre pela originalidade, inovação e satisfação total do cliente.</li>
+      <li><span>2</span> Política de Ética e Transparência
+      Atuar com honestidade em todas as relações internas e externas assegurando clareza nos processos, prazos e valores, mantendo uma postura ética em cada decisão.</li>
+      <li><span>3</span> Política de Valorização das Pessoas
+      Promover um ambiente de trabalho saudável, colaborativo e inclusivo, onde cada funcionário seja respeitado, reconhecido e incentivado a desenvolver suas habilidades.</li>
+      <li><span>4</span> Política de Sustentabilidade e Responsabilidade Social
+       Adotar práticas que minimizem impactos ambientais, utilizando recursos de forma consciente, e apoiar iniciativas sociais que contribuam para o desenvolvimento da comunidade.</li>
+      <li><span>5</span> Política de Segurança da Informação e Confidencialidade
+      Proteger todas as informações e materiais dos clientes com sigilo absoluto, garantindo segurança digital e preservando a confiança depositada em nossos serviços.</li>
     </ul>
   </main>
   <script src="script.js"></script>
