--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   </nav>
 
   <main>
-    <div class="content-grid">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="imagem3.png" alt="">
-    </div>
-  </main>
+  <div class="content-grid">
+    <img src="imagem1.jpg" alt="Editor de vídeo em um setup com duas telas.">
+    <img src="imagem2.jpg" alt="Timeline de um software de edição de vídeo.">
+    <img class="imagem-larga" src="imagem3.png" alt="Notebook exibindo software de edição de vídeo com color grading.">
+  </div>
+</main>
   <script src="script.js"></script>
 </body>
 </html>
