--- a/noticias.html
+++ b/noticias.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-  <div class="header-top">
-    <div class="logo">
-      <img src="logoyz.png" alt="YZ Video Logo" class="logo-img">
+    <div class="header-top">
+      <div class="logo">
+        <img src="logoyz.png" alt="YZ Video Logo" class="logo-img">
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
   <nav>
     <ul>
@@ -30,50 +30,41 @@
   <h1>Notícias</h1>
   <div class="news-grid">
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Novo Lançamento de Série</h2>
-      <p>Confira o mais recente sucesso da YZ Video, disponível agora em nossa plataforma!</p>
+      <img src="https://picsum.photos/400/300?random=1" alt="Pôster da nova série 'Horizontes de Aço'">
+      <h2>Novo Lançamento: Série 'Horizontes de Aço'</h2>
+      <p>A distopia futurista que vai prender sua atenção. Confira o mais recente sucesso da YZ Video, disponível agora em nossa plataforma!</p>
     </article>
+
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Evento Ao Vivo Anunciado</h2>
-      <p>Participe do nosso próximo evento ao vivo no próximo sábado às 20h.</p>
+      <img src="https://picsum.photos/400/300?random=2" alt="Anúncio de evento ao vivo com a equipe de produção">
+      <h2>Evento Ao Vivo com Criadores</h2>
+      <p>Participe de um bate-papo exclusivo com os diretores e elenco da nossa nova produção. Próximo sábado às 20h.</p>
     </article>
+
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+      <img src="https://picsum.photos/400/300?random=3" alt="Gráfico mostrando melhoria de qualidade de imagem">
+      <h2>Streaming em 4K HDR: A Nova Realidade na YZ</h2>
+      <p>Nossa plataforma agora suporta streaming em 4K HDR. Uma atualização na tecnologia para uma imersão sem igual.</p>
     </article>
+
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+      <img src="https://picsum.photos/400/300?random=4" alt="Pessoas em uma sala de cinema assistindo a um filme">
+      <h2>YZ Video Firma Parceria com Estúdios Cinerama</h2>
+      <p>Uma nova aliança para trazer ainda mais filmes aclamados pela crítica diretamente para a sua tela. Saiba mais sobre os títulos que chegarão em breve.</p>
     </article>
+
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+      <img src="https://picsum.photos/400/300?random=5" alt="Troféu de um prêmio de cinema">
+      <h2>Documentário 'Raízes da Terra' Vence Prêmio Internacional</h2>
+      <p>Nossa produção original foi aclamada no Festival de Cinema Independente de Sundance. Um grande orgulho para toda a nossa equipe!</p>
     </article>
+
     <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
+      <img src="https://picsum.photos/400/300?random=6" alt="Pessoa trabalhando com efeitos visuais em um computador">
+      <h2>Bastidores: Os Efeitos Visuais de 'Crônicas Interstelares'</h2>
+      <p>Veja como nossa equipe de VFX criou os mundos e criaturas fantásticas da nossa série de ficção científica mais popular.</p>
     </article>
-    <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
-    </article>
-    <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
-    </article>
-    <article class="news-card">
-      <div class="image-placeholder"></div>
-      <h2>Atualização na Tecnologia</h2>
-      <p>Descubra as novas ferramentas que estamos usando para melhorar nossas produções.</p>
-    </article>
+
   </div>
 </main>
   <script src="script.js"></script>
