--- a/sobre.html
+++ b/sobre.html
@@ -11,8 +11,10 @@
   <header>
   <div class="header-top">
     <div class="logo">
-      <img src="logoyz.png" alt="YZ Video Logo" class="logo-img">
-    </div>
+  <a href="index.html">
+    <img src="logoyz.png" alt="YZ Video Logo" class="logo-img">
+  </a>
+</div>
   </div>
   
 </header>
